# IBControl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  angular.json  package-lock.json  package.json
.github/workflows/: build-development.yml  build-release.yml
scripts/: postinstall.js  set-version.js
src/: index.html  main.ts  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/background/: http.rs  openvr.rs
src-tauri/src/commands/: http.rs  openvr.rs
src-tauri/src/models/: events.rs  ovrdevice.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
src/app/components/brightness-slider/: brightness-slider.component.html  brightness-slider.component.scss  brightness-slider.component.ts
src/app/components/main-status-bar/: main-status-bar.component.html  main-status-bar.component.scss  main-status-bar.component.ts
src/app/migrations/: app-settings.migrations.ts
src/app/models/: osc-message.ts  settings.ts
src/app/services/: app-settings.service.ts  http-control.service.ts  notification.service.ts  openvr.service.ts  osc-control.service.ts  osc.service.ts
src/app/services/brightness-control/: brightness-control.service.ts
src/app/utils/: animations.ts  completer.ts  task-queue.ts
src/app/views/about-view/: about-view.component.html  about-view.component.scss  about-view.component.ts
src/app/views/dashboard-view/: dashboard-view.component.html  dashboard-view.component.scss  dashboard-view.component.ts
src/app/views/http-settings-view/: http-settings-view.component.html  http-settings-view.component.ts
src/app/views/osc-settings-view/: osc-settings-view.component.html  osc-settings-view.component.scss  osc-settings-view.component.spec.ts  osc-settings-view.component.ts
src/styles/: buttons.scss  inputs.scss  panes.scss  shadows.scss  themes.scss  typography.scss
swagger/: .gitignore  swagger-initializer.js  swagger.yaml
unity/: IBControlVRCMenu.unitypackage
(+2 files in other folders)
