[package]
name = "ibcontrol"
version = "0.1.1"
description = "Display brightness control for the Valve Index"
authors = ["Raphiiko"]
license = "MIT"
repository = "https://github.com/Raphiiko/IBControl"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
openvr_sys = "2.0.3"
rosc = "0.9.1"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["notification-all", "shell-open", "updater"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
lazy_static = "1.4.0"
log = "0.4.17"
time = "0.3.20"
sysinfo = "0.26.9"
substring = "1.4.5"
actix-web = "4.3.1"
crossbeam-channel = "0.5.7"
actix-files = "0.6.2"
actix-cors = "0.6.4"
futures = "0.3.27"
uuid= { version = "1.3.0", features = [
    "v4",               
    "fast-rng",         
] }

[dependencies.openvr]
git = "https://github.com/Raphiiko/oyasumi-rust-openvr"
#path = "../../oyasumi-rust-openvr"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
